# lifebuddy

./: .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  quick-start.sh  setup_ollama.py  test_tool_fix.py
app/: config.py  main.py
app/agents/: README.md  base_agent.py  diet_agent.py  fitness_agent.py  health_graph.py  intent_classifier.py  mindset_agent.py  router.py  router_agent.py
app/api/: main.py
app/core/: embeddings.py  health_data_service.py  health_tools.py  llm_provider.py  logger.py  metrics.py  ollama_setup.py  prompts.py
app/db/: chroma_manager.py  models.py  sqlite_manager.py
app/ingestion/: apple_health.py  myfitnesspal.py  normalize.py
app/ui/: dashboard.py  data_upload.py  journal.py  streamlit_app.py
data/: .gitkeep  user_profile.md  workout_plan.md
data/raw/: .gitkeep
data/raw/apple_health_export/: .gitkeep
deployment/: .dockerignore  DOCKER.md  Dockerfile  docker-compose.yml  docker-entrypoint.sh  setup-ollama.sh
logs/: .gitkeep
tests/: test_apple_health_exploration.py  test_intent_routing.py  test_langgraph_logic.py  test_langgraph_migration.py  test_provider_switching.py  test_sleep_data_analysis.py  test_timezone_system.py  test_tool_fix.py
