# Poetry / project dependencies 

[tool.poetry]
name = "lifebuddy"
version = "0.1.0"
description = "AI-powered personal health and wellness companion"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
lxml = "^5.4.0"
langchain = "^0.3.25"
langchain-openai = "^0.3.24"
langchain-ollama = "^0.3.3"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
streamlit = "^1.45.1"
python-dotenv = "^1.1.0"
requests = "^2.32.4"
langchain-community = "^0.3.25"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lifebuddy = "app.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 